# promptlab-v2

./: .gitignore  README.md  README_LAMBDA.md  pyproject.toml
configs/: cotrain.yaml  cotrain_alpaca_targeted.yaml  deslop.yaml  detector.yaml  detector_binary.yaml  eval.yaml  rewriter.yaml  topics_alpaca_diverse.txt  topics_alpaca_diverse.yaml
cotrain/: __init__.py  data_manager.py  goodhart.py  loop.py  pair_logger.py  stopping.py
data/: build_mirror_dataset.py  download_aeon_essays.py  download_editlens.py  download_grammarly.py  make_mirror_splits.py  merge_datasets.py
deslop/: __init__.py  constraints.py  drift_coef_opt.py  export_pair_drift_features.py  mutator.py  optimizer.py  prompt_bank.py  run_topic.py  scoring.py  similarity.py
detector/: __init__.py  _device.py  calibrate.py  inference.py  model.py  sanity_check.py  train.py  training_trace.py
docs/: STAT-4830_promptlabv2_experiments.ipynb  promptlab_v2_academic.md  promptlab_v2_report_final.md
eval/: __init__.py  compare_baselines.py  metrics.py  run_eval.py
figures/: promptlab_v2_diagrams.html
notebooks/: 01_explore_editlens.ipynb  02_train_detector.ipynb  03_deslop_demo.ipynb  04_cotrain_demo.ipynb  05_rewriter_demo.ipynb  06_ablation.ipynb  cotrain_colab.ipynb  cotrain_report.ipynb  promptlab_v2_demo.ipynb  training_analysis.ipynb
rewriter/: __init__.py  cluster_prompts.py  cross_topic_expand.py  dataset.py  essay_dataset.py  generate_essay_pairs.py  harvest_alpaca.py  inference.py  permute_output_prompts.py  prepare_pairs.py  rl_refine.py  train.py
scripts/: lambda_setup.sh  (+8 more)
(+6 files in other folders)
